crates/benday-core/tests/snapshots/gallery__histogram_step_latency.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
7┤               ⣿⣿⣿⣿⣿
 │          ⣶⣶⣶⣶⣶⣿⣿⣿⣿⣿
 │          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶
 │          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 │     ⣤⣤⣤⣤⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣤⣤⣤⣤⣤
 │     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀⣀⣀                    ⣀⣀⣀⣀⣀
 │⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀          ⣿⣿⣿⣿⣿
0┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿
 └┴────┴────┴────┴────┴────┴────┴────┴────┴────┴────┴────┴────
  0   10   20   30   40   50   60   70   80   90   100  110

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 62,
    "rows": 10
  },
  "x": {
    "bin": {
      "bins": 12,
      "domain": [
        0.0,
        120.0
      ],
      "step": 10.0
    },
    "field": "latency_ms",
    "type": "quantitative"
  },
  "y": {
    "aggregate": "count",
    "domain": [
      0.0,
      7.0
    ],
    "field": "latency_ms"
  }
}
