crates/benday-core/tests/snapshots/gallery__histogram_ticks_w30.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
10┤                        ⣿⣿⣿⣿⣿⣿
  │                  ⣤⣤⣤⣤⣤⣤⣿⣿⣿⣿⣿⣿
  │                  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │            ⣶⣶⣶⣶⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │      ⣀⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │⣤⣤⣤⣤⣤⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 0┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  └┴─────┴─────┴─────┴─────┴─────
   0    20    40    60    80  100

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 33,
    "rows": 10
  },
  "x": {
    "bin": {
      "bins": 5,
      "domain": [
        0.0,
        100.0
      ],
      "step": 20.0
    },
    "field": "ms",
    "type": "quantitative"
  },
  "y": {
    "aggregate": "count",
    "domain": [
      0.0,
      10.0
    ],
    "field": "ms"
  }
}
