crates/benday-core/tests/snapshots/gallery__lines_30x6.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
          revenue by region

220┤                      ⢀⠔
   │               ⢀⡠⠔⠢⠤⣀⠔⠁
   │           ⢀⠤⠒⠊⠁
   │    ⣀⡠⠤⢄⣀⡠⠊⠁       ⡠⠔⠒⠒⠒
   │   ⠉        ⢀⡠⠒⠉⠑⠒⠉
 80┤   ⠒⠢⠤⠤⠒⠊⠉⠉⠉⠁
   └┴──────────────┴─────────────┴
    0              5            10
    ── west   ── east

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#55c4fe",
      "name": "west",
      "points": 8
    },
    {
      "color": "#6cd092",
      "name": "east",
      "points": 8
    }
  ],
  "size": {
    "columns": 34,
    "rows": 11
  },
  "x": {
    "domain": [
      0.0,
      10.0
    ],
    "field": "month",
    "type": "quantitative"
  },
  "y": {
    "domain": [
      80.0,
      220.0
    ],
    "field": "revenue"
  }
}
