crates/benday-core/tests/snapshots/gallery__lines_60x10.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                         revenue by region
    ── west   ── east
220┤                                                          ⢀⡠
200┤                                                       ⣀⠤⠊⠁
   │                                     ⣀⡠⠤⠒⠒⠉⠉⠒⠒⠤⠤⣀⣀ ⢀⡠⠔⠉
180┤                           ⣀⣀⣀⠤⠤⠤⠒⠒⠉⠉             ⠉⠁
160┤                       ⡠⠔⠊⠉
140┤                   ⢀⠤⠒⠉                          ⣀⡠⠤⠤⠤⠤⢄⣀⣀⣀⣀
120┤ ⢀⣀⡠⠤⠔⠒⠊⠉⠉⠉⠒⠒⠒⠒⠤⠤⠔⠊⠁             ⢀⣀⣀⣀⣀⡀    ⢀⣀⠤⠔⠊⠉
   │⠉⠁                           ⢀⡠⠔⠊⠁    ⠈⠉⠉⠉⠉⠁
100┤             ⣀⡠⠤⠔⠒⠒⠢⠤⠤⠤⢄⣀⣀⡠⠔⠊⠁
 80┤⠉⠉⠑⠒⠒⠒⠢⠤⠤⠔⠒⠊⠉
   └┴───────┴────────┴───────┴────────┴───────┴────────┴───────┴
    1       2        3       4        5       6        7       8

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#55c4fe",
      "name": "west",
      "points": 8
    },
    {
      "color": "#6cd092",
      "name": "east",
      "points": 8
    }
  ],
  "size": {
    "columns": 64,
    "rows": 14
  },
  "x": {
    "domain": [
      1.0,
      8.0
    ],
    "field": "month",
    "type": "quantitative"
  },
  "y": {
    "domain": [
      80.0,
      220.0
    ],
    "field": "revenue"
  }
}
