crates/benday-core/tests/snapshots/gallery__multi_series_ansi.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                           [38;2;222;226;232mcolored lines[0m
    [38;2;85;196;254m── [38;2;106;112;122mwest   [38;2;108;208;146m── [38;2;106;112;122meast[0m
[38;2;106;112;122m4.0┤                                                      [38;2;85;196;254m⢀⣀⠤⠔⠒⠉[0m
[38;2;106;112;122m3.5┤                                                [38;2;85;196;254m⢀⣀⠤⠔⠒⠉⠁[0m
   [38;2;106;112;122m│                                          [38;2;85;196;254m⣀⡠⠤⠔⠒⠉⠁[0m
[38;2;106;112;122m3.0┤                                    [38;2;85;196;254m⣀⡠⠤⠒⠊⠉      [38;2;108;208;146m⢀⣀⣀⣀⣀⠤⠤⠤⠤⠔⠒⠒[0m
   [38;2;106;112;122m│                              [38;2;108;208;146m⣀⣠⣤⣒⡪⠭⠤⠤⠤⠒⠒⠒⠒⠊⠉⠉⠉⠉⠁[0m
[38;2;106;112;122m2.5┤           [38;2;108;208;146m⢀⣀⣀⣀⣀⡠⠤⠤⠤⠤⠒⠒⠒⣒⡪⠭⠛⠋⠉[0m
[38;2;106;112;122m2.0┤[38;2;108;208;146m⠤⠤⠔⠒⠒⠒⠒⠉⠉⠉⠉⠁      [38;2;85;196;254m⣀⡠⠤⠒⠊⠉[0m
   [38;2;106;112;122m│           [38;2;85;196;254m⢀⣀⠤⠔⠒⠊⠉[0m
[38;2;106;112;122m1.5┤     [38;2;85;196;254m⢀⣀⠤⠔⠒⠉⠁[0m
[38;2;106;112;122m1.0┤[38;2;85;196;254m⣀⠤⠔⠒⠉⠁[0m
   [38;2;106;112;122m└┴──────────────────────────────────────────────────────────┴[0m
    [38;2;106;112;122ma                                                          b[0m

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#55c4fe",
      "name": "west",
      "points": 2
    },
    {
      "color": "#6cd092",
      "name": "east",
      "points": 2
    }
  ],
  "size": {
    "columns": 64,
    "rows": 14
  },
  "x": {
    "domain": [
      "a",
      "b"
    ],
    "field": "m",
    "type": "nominal"
  },
  "y": {
    "domain": [
      1.0,
      4.0
    ],
    "field": "v"
  }
}
