crates/benday-core/tests/snapshots/gallery__negative_line.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
 40┤
   │                                                          ⢀⡠
   │                                                       ⣀⠔⠊⠁
 20┤                                                   ⢀⡠⠒⠉
   │                 ⣀⠤⠒⠉⠒⠢⠤⣀⡀                      ⣀⠔⠊⠁
   │             ⢀⡠⠔⠊        ⠈⠉⠒⠢⠤⣀⡀            ⢀⡠⠔⠉
  0┤          ⣀⠤⠒⠁                 ⠈⠉⠒⠢⠤⣀⡀   ⣀⠤⠊⠁
   │       ⡠⠔⠊                           ⠈⠉⠒⠉
   │   ⢀⠤⠒⠉
-20┤⡠⠔⠊⠁
   └┴─────────┴─────────┴─────────┴────────┴─────────┴─────────┴
   0.0       0.5       1.0       1.5      2.0       2.5      3.0

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 4
    }
  ],
  "size": {
    "columns": 64,
    "rows": 12
  },
  "x": {
    "domain": [
      0.0,
      3.0
    ],
    "field": "x",
    "type": "quantitative"
  },
  "y": {
    "domain": [
      -20.0,
      40.0
    ],
    "field": "y"
  }
}
